# rust-graphql-server

./: Cargo.toml  README.md
src/: main.rs
src/schema/: mod.rs
src/schema/health/: health_mutation.rs  health_query.rs  mod.rs
