[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", features = [] }
async-graphql = "3.0"
async-graphql-actix-web = "3.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"